--- a/signals/src/app/app.component.html
+++ b/signals/src/app/app.component.html
@@ -3,7 +3,7 @@
   <div class="row mt-5">
     <div class="col-md-4">
       <div class="input-group mb-3">
-        <span class="input-group-text" id="basic-addon1">@</span>
+        <span class="input-group-text" id="basic-addon1">&#64;</span>
         <input
           type="text"
           class="form-control"
