--- a/signals/src/app/signal/signal.component.html
+++ b/signals/src/app/signal/signal.component.html
@@ -1,10 +1,26 @@
-<div class="grid gap-3">
-  <div class="card mt-2">
-    <h5 class="card-header">signal API</h5>
-    <div class="card-body">
-      <h6 class="card-title">{{ userName() }}</h6>
-      <a class="card-link" (click)="setUserName('John')"> set Value </a>
-      <a class="card-link" (click)="updateUserName('Hello')"> update Value </a>
+<div class="d-flex justify-content-evenly">
+  <div class="col-md-4">
+    <div class="card mt-2">
+      <h5 class="card-header">signal API</h5>
+      <div class="card-body">
+        <h6 class="card-title">{{ userName() }}</h6>
+        <a class="card-link" (click)="setUserName('John')"> set Value </a>
+        <a class="card-link" (click)="updateUserName('Hello')">
+          update Value
+        </a>
+      </div>
+    </div>
+  </div>
+  <div class="col-md-4">
+    <div class="card mt-2">
+      <h5 class="card-header">signal API</h5>
+      <div class="card-body">
+        <h6 class="card-title">{{ userName() }}</h6>
+        <a class="card-link" (click)="setUserName('John')"> set Value </a>
+        <a class="card-link" (click)="updateUserName('Hello')">
+          update Value
+        </a>
+      </div>
     </div>
   </div>
 </div>
