--- a/signals/src/app/signal/signal.component.html
+++ b/signals/src/app/signal/signal.component.html
@@ -4,6 +4,8 @@
       <h5 class="card-header">signal API</h5>
       <div class="card-body">
         <h6 class="card-title">{{ userName() }}</h6>
+      </div>
+      <div class="card-footer text-body-secondary">
         <a class="card-link" (click)="setUserName('John')"> set Value </a>
         <a class="card-link" (click)="updateUserName('Hello')">
           update Value
@@ -13,12 +15,37 @@
   </div>
   <div class="col-md-4">
     <div class="card mt-2">
-      <h5 class="card-header">signal API</h5>
+      <h5 class="card-header">signal API with Object Value</h5>
       <div class="card-body">
-        <h6 class="card-title">{{ userName() }}</h6>
-        <a class="card-link" (click)="setUserName('John')"> set Value </a>
-        <a class="card-link" (click)="updateUserName('Hello')">
-          update Value
+        <h6 class="card-title">
+          <p>Name: {{ userDetail().name }}</p>
+          <p>Name: {{ userDetail().userId }}</p>
+          <div class="input-group flex-nowrap">
+            <input
+              type="text"
+              class="form-control"
+              placeholder="Username"
+              aria-label="Username"
+              aria-describedby="addon-wrapping"
+              [(ngModel)]="userDetailNameValue"
+            />
+          </div>
+          <div class="input-group mt-1 flex-nowrap">
+            <input
+              type="text"
+              class="form-control"
+              placeholder="UserId"
+              aria-label="UserId"
+              aria-describedby="addon-wrapping"
+              [(ngModel)]="userDetailNumberValue"
+            />
+          </div>
+        </h6>
+        <a class="card-link" (click)="updateUserDetailName()">
+          update user Name
+        </a>
+        <a class="card-link" (click)="updateUserDetailNumber()">
+          update user Number
         </a>
       </div>
     </div>
