--- a/signals/src/app/to-signal/to-signal.component.html
+++ b/signals/src/app/to-signal/to-signal.component.html
@@ -1,1 +1,12 @@
-<p>to-signal works!</p>
+<div class="d-flex justify-content-center">
+  <span
+    >With out initial Value :
+    <strong>{{ currentTimestampWithoutInitialValue() }}</strong></span
+  >
+</div>
+<div class="d-flex justify-content-center">
+  <span
+    >With initial Value
+    <strong>{{ currentTimestampWithInitialValue() }}</strong></span
+  >
+</div>
