feat: add ToObservableComponent and integrate with RxjsInteropComponent

--- a/signals/src/app/rxjs-interop/rxjs-interop.component.html
+++ b/signals/src/app/rxjs-interop/rxjs-interop.component.html
@@ -9,6 +9,14 @@
           <app-to-signal />
         </ng-template>
       </mat-expansion-panel>
+      <mat-expansion-panel>
+        <mat-expansion-panel-header>
+          <mat-panel-title> toObservable </mat-panel-title>
+        </mat-expansion-panel-header>
+        <ng-template matExpansionPanelContent>
+          <app-to-observable />
+        </ng-template>
+      </mat-expansion-panel>
     </mat-accordion>
   </div>
 </div>
