--- a/signals/src/app/rxjs-interop/rxjs-interop.component.html
+++ b/signals/src/app/rxjs-interop/rxjs-interop.component.html
@@ -17,6 +17,14 @@
           <app-to-observable />
         </ng-template>
       </mat-expansion-panel>
+      <mat-expansion-panel>
+        <mat-expansion-panel-header>
+          <mat-panel-title> rxResource </mat-panel-title>
+        </mat-expansion-panel-header>
+        <ng-template matExpansionPanelContent>
+          <app-rx-resource />
+        </ng-template>
+      </mat-expansion-panel>
     </mat-accordion>
   </div>
 </div>
