feat: implement filteredTodos functionality in todo store; update template to use filtered todos

--- a/ngrxSignals/src/app/app.component.html
+++ b/ngrxSignals/src/app/app.component.html
@@ -24,7 +24,7 @@
   </mat-button-toggle-group>
 
   <mat-selection-list>
-    @for (eachTodo of todoStore.todos(); track eachTodo.id) {
+    @for (eachTodo of todoStore.filteredTodos(); track eachTodo.id) {
     <mat-list-option
       (click)="$event.stopPropagation()"
       [selected]="eachTodo.completed"
