--- a/ngrxSignals/src/app/app.component.html
+++ b/ngrxSignals/src/app/app.component.html
@@ -2,6 +2,5 @@
   <mat-tab label="with Out RxJS">
     <app-with-out-rx-js />
   </mat-tab>
-  <mat-tab label="Second"> Content 2 </mat-tab>
-  <mat-tab label="Third"> Content 3 </mat-tab>
+  <mat-tab label="with RxJS"> Content 2 </mat-tab>
 </mat-tab-group>
