feat: add WithRxJs component and integrate into app; update tabs and remove unnecessary styles

--- a/ngrxSignals/src/app/app.component.html
+++ b/ngrxSignals/src/app/app.component.html
@@ -2,5 +2,7 @@
   <mat-tab label="with Out RxJS">
     <app-with-out-rx-js />
   </mat-tab>
-  <mat-tab label="with RxJS"> Content 2 </mat-tab>
+  <mat-tab label="with RxJS">
+    <app-with-rx-js />
+  </mat-tab>
 </mat-tab-group>
