--- a/ngrxSignals/src/app/with-rx-js/with-rx-js.component.html
+++ b/ngrxSignals/src/app/with-rx-js/with-rx-js.component.html
@@ -1,27 +1,25 @@
+@if (!isLoading()) {
+
 <div class="mat-elevation-z8">
-  <table mat-table [dataSource]="dataSource">
-    <!-- Position Column -->
-    <ng-container matColumnDef="position">
-      <th mat-header-cell *matHeaderCellDef>No.</th>
-      <td mat-cell *matCellDef="let element">{{ element.position }}</td>
+  <table mat-table [dataSource]="todos()">
+    <ng-container matColumnDef="id">
+      <th mat-header-cell *matHeaderCellDef>Id.</th>
+      <td mat-cell *matCellDef="let element">{{ element.id }}</td>
     </ng-container>
 
-    <!-- Name Column -->
-    <ng-container matColumnDef="name">
-      <th mat-header-cell *matHeaderCellDef>Name</th>
-      <td mat-cell *matCellDef="let element">{{ element.name }}</td>
+    <ng-container matColumnDef="todo">
+      <th mat-header-cell *matHeaderCellDef>Todo</th>
+      <td mat-cell *matCellDef="let element">{{ element.todo }}</td>
     </ng-container>
 
-    <!-- Weight Column -->
-    <ng-container matColumnDef="weight">
-      <th mat-header-cell *matHeaderCellDef>Weight</th>
-      <td mat-cell *matCellDef="let element">{{ element.weight }}</td>
+    <ng-container matColumnDef="userId">
+      <th mat-header-cell *matHeaderCellDef>User Id</th>
+      <td mat-cell *matCellDef="let element">{{ element.userId }}</td>
     </ng-container>
 
-    <!-- Symbol Column -->
-    <ng-container matColumnDef="symbol">
-      <th mat-header-cell *matHeaderCellDef>Symbol</th>
-      <td mat-cell *matCellDef="let element">{{ element.symbol }}</td>
+    <ng-container matColumnDef="completed">
+      <th mat-header-cell *matHeaderCellDef>Completed Status</th>
+      <td mat-cell *matCellDef="let element">{{ element.completed }}</td>
     </ng-container>
 
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
@@ -35,5 +33,6 @@
   >
   </mat-paginator>
 </div>
-
-<button (click)="loadData()" mat-raised-button>Load Data</button>
+} @else {
+<mat-spinner />
+}
