feat: implement pagination and loading state management in WithRxJs component

--- a/ngrxSignals/src/app/with-rx-js/with-rx-js.component.html
+++ b/ngrxSignals/src/app/with-rx-js/with-rx-js.component.html
@@ -1,5 +1,4 @@
 @if (!isLoading()) {
-
 <div class="mat-elevation-z8">
   <table mat-table [dataSource]="todos()">
     <ng-container matColumnDef="id">
@@ -28,8 +27,10 @@
 
   <mat-paginator
     [pageSizeOptions]="[5, 10, 20]"
+    [pageSize]="pageSize"
     showFirstLastButtons
     aria-label="Select page of periodic elements"
+    (page)="pageSizeChanged($event)"
   >
   </mat-paginator>
 </div>
