feat: update WithRxJs component and service to support pagination with skip functionality

--- a/ngrxSignals/src/app/with-rx-js/with-rx-js.component.html
+++ b/ngrxSignals/src/app/with-rx-js/with-rx-js.component.html
@@ -27,6 +27,7 @@
 
   <mat-paginator
     [pageSizeOptions]="[5, 10, 20]"
+    [length]="totalTodos()"
     [pageSize]="pageSize"
     showFirstLastButtons
     aria-label="Select page of periodic elements"
