--- a/CSS/recipe-page-main/style.css
+++ b/CSS/recipe-page-main/style.css
@@ -5,7 +5,7 @@ body {
 .container {
   display: flex;
   justify-content: center;
-  width: 45em;
+  width: 48em;
   margin: 0 auto;
   padding: 0 20px;
 }
@@ -117,5 +117,36 @@ body {
     font-weight: bolder;
     font-family: "Times New Roman", Times, serif;
     color: #4d4c4c;
+  }
+}
+
+.nutrition_section {
+  h3 {
+    color: saddlebrown;
+    font-size: 1.5em;
+  }
+  p {
+    font-family: monospace;
+    color: #7a7975;
+    margin-top: 0.5em;
+  }
+
+  table {
+    width: 100%;
+    border-collapse: collapse;
+    margin-bottom: 1em;
+  }
+
+  th,
+  td {
+    color: #4d4c4c;
+    text-align: left;
+    padding: 12px;
+    border-bottom: 1px solid #ddd;
+  }
+
+  td {
+    font-weight: bold;
+    color: #723d18;
   }
 }
