--- a/CSS/single-price-grid-component-master/style.css
+++ b/CSS/single-price-grid-component-master/style.css
@@ -10,12 +10,29 @@ body {
 }
 
 .card {
-  display: flex;
-  justify-content: center;
-  align-items: center;
   background-color: white;
   border-radius: 10px;
-  width: 300px;
+  width: 40rem;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   padding: 2rem;
+}
+
+.community_section {
+  .title {
+    font-size: 1.5rem;
+    font-weight: 700;
+    color: hsl(179, 62%, 43%);
+    font-family: "Times New Roman", Times, serif;
+  }
+  .subtitle {
+    font-size: 1rem;
+    font-weight: 500;
+    color: hsl(71, 83%, 53%);
+  }
+  .description {
+    font-size: 1rem;
+    font-weight: 400;
+    color: hsl(206, 3%, 55%);
+    line-height: 1.5;
+  }
 }
