--- a/Angular/SSE/src/app/app.component.html
+++ b/Angular/SSE/src/app/app.component.html
@@ -1,32 +1,21 @@
-<div class="bg-gray-100">
-  <div
-    class="container mx-auto flex gap-4 flex-col justify-center items-center h-screen"
-  >
-    <div class="justify-center items-center">
-      <select class="bg-white p-2 rounded-md">
-        <option value="1">1 day</option>
-        <option value="2">2 days</option>
-        <option value="3">3 days</option>
-      </select>
+<div class="flex gap-4 flex-col justify-center items-center bg-gray-100 p-4">
+  <div class="relative inline-block">
+    <img
+      src="https://images.unsplash.com/photo-1633332755192-727a05c4013d?ixlib=rb-1.2.1&amp;ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&amp;auto=format&amp;fit=crop&amp;w=1480&amp;q=80"
+      alt="Profile avatar"
+      class="w-16 h-16 rounded-full object-cover"
+    />
+    <div
+      class="absolute -bottom-1 -right-1 flex items-center justify-center w-8 h-8 bg-red-500 rounded-full text-white font-medium"
+    >
+      5
     </div>
-
-    <div class="flex justify-center items-center">
-      <div class="text-3xl font-bold">
-        <span class="countdown font-mono text-4xl">
-          <span style="--value: 15">
-            <span class="countdown-number">00</span>
-          </span>
-        </span>
-        min
-      </div>
-      <div class="text-3xl font-bold">
-        <span class="countdown font-mono text-4xl">
-          <span style="--value: 15">
-            <span class="countdown-number">00</span>
-          </span>
-        </span>
-        sec
-      </div>
-    </div>
+  </div>
+  <div class="justify-center items-center">
+    <select class="bg-white p-2 rounded-md">
+      <option value="1">1 day</option>
+      <option value="2">2 days</option>
+      <option value="3">3 days</option>
+    </select>
   </div>
 </div>
