--- a/Angular/SSE/src/app/app.component.html
+++ b/Angular/SSE/src/app/app.component.html
@@ -1,4 +1,11 @@
 <div class="flex gap-4 flex-col justify-center items-center bg-gray-100 p-4">
+  <div class="justify-center items-center">
+    <select class="bg-white p-2 rounded-md" [(ngModel)]="notificationCount">
+      <option value="10">10 notification</option>
+      <option value="20">20 notification</option>
+      <option value="30">30 notification</option>
+    </select>
+  </div>
   <div class="relative inline-block">
     <img
       src="https://images.unsplash.com/photo-1633332755192-727a05c4013d?ixlib=rb-1.2.1&amp;ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&amp;auto=format&amp;fit=crop&amp;w=1480&amp;q=80"
@@ -10,12 +17,5 @@
     >
       5
     </div>
-  </div>
-  <div class="justify-center items-center">
-    <select class="bg-white p-2 rounded-md">
-      <option value="1">1 day</option>
-      <option value="2">2 days</option>
-      <option value="3">3 days</option>
-    </select>
   </div>
 </div>
