Refactor countdown timer UI for improved layout and notification count options

--- a/Angular/SSE/src/app/app.component.html
+++ b/Angular/SSE/src/app/app.component.html
@@ -1,74 +1,76 @@
 @let liveNotificationsCount = liveNotifications().length; @let
 sseConnectionState = eventSource ? eventSource.readyState : -1;
 
-<div class="flex flex-row justify-center items-center gap-4 text-center mt-1">
-  <select
-    class="basis-16 border-1 rounded-xl bg-gray-200"
-    [(ngModel)]="notificationCount"
-  >
-    <option value="0" disabled>Select notification count</option>
-    <option value="10">10 notification</option>
-    <option value="20">20 notification</option>
-    <option value="30">30 notification</option>
-  </select>
-  <div class="basis-16 rounded-xl">
-    <img
-      src="https://images.unsplash.com/photo-1633332755192-727a05c4013d?ixlib=rb-1.2.1&amp;ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&amp;auto=format&amp;fit=crop&amp;w=1480&amp;q=80"
-      alt="Profile avatar"
-      class="w-16 h-16 rounded-full object-cover"
-    />
-
-    @if(liveNotificationsCount > 0){
-
+<div class="p-5 flex flex-row gap-4 bg-slate-100">
+  <div class="w-1/2">
     <div
-      class="absolute ml-8 -mt-5 flex items-center justify-center w-8 h-8 bg-red-500 rounded-full text-white font-medium"
+      class="flex flex-row justify-center items-center gap-4 text-center mt-1"
     >
-      {{ liveNotificationsCount }}
-    </div>
-    }
-  </div>
-  <div class="basis-64 border-1 rounded-xl bg-gray-200">
-    Connection status:
-    <span
-      [ngClass]="{
-        ' text-yellow-800': eventSource?.readyState === 0,
-        'text-green-800': eventSource?.readyState === 1,
-        'text-red-800': eventSource?.readyState === 2,
-        'text-gray-800': sseConnectionState === -1
-      }"
-      class="text-md font-medium rounded-full"
-    >
-      {{ connectionStatusText[sseConnectionState] || "Unknown" }}
-    </span>
-  </div>
-  <div class="basis-96 shadow-md rounded-md">
-    @for (notification of liveNotifications(); track $index;let idx = $index) {
-    <div class="flex gap-x-3">
-      <div class="w-24 text-end">
-        <span class="text-xs text-gray-500 dark:text-neutral-400">{{
-          notification.currentTime
-        }}</span>
-      </div>
-      <!-- Icon -->
-      <div
-        class="relative last:after:hidden after:absolute after:top-7 after:bottom-0 after:start-3.5 after:w-px after:-translate-x-[0.5px] after:bg-gray-200 dark:after:bg-neutral-700"
+      <select
+        class="basis-16 border-1 rounded-xl bg-gray-200"
+        [(ngModel)]="notificationCount"
       >
-        <div class="relative z-10 size-7 flex justify-center items-center">
-          <div
-            class="size-2 rounded-full bg-gray-400 dark:bg-neutral-600"
-          ></div>
+        <option value="0" disabled>Select notification count</option>
+        <option value="5">5 notification</option>
+        <option value="10">10 notification</option>
+        <option value="15">15 notification</option>
+      </select>
+      <div class="basis-16 rounded-xl">
+        <img
+          src="https://images.unsplash.com/photo-1633332755192-727a05c4013d?ixlib=rb-1.2.1&amp;ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&amp;auto=format&amp;fit=crop&amp;w=1480&amp;q=80"
+          alt="Profile avatar"
+          class="w-16 h-16 rounded-full object-cover"
+        />
+        @if(liveNotificationsCount > 0){
+        <div
+          class="absolute ml-8 -mt-5 flex items-center justify-center w-8 h-8 bg-red-500 rounded-full text-white font-medium"
+        >
+          {{ liveNotificationsCount }}
+        </div>
+        }
+      </div>
+      <div class="basis-64 border-1 rounded-xl bg-gray-200">
+        Connection status:
+        <span
+          [ngClass]="{
+            ' text-yellow-800': eventSource?.readyState === 0,
+            'text-green-800': eventSource?.readyState === 1,
+            'text-red-800': eventSource?.readyState === 2,
+            'text-gray-800': sseConnectionState === -1
+          }"
+          class="text-md font-medium rounded-full"
+        >
+          {{ connectionStatusText[sseConnectionState] || "Unknown" }}
+        </span>
+      </div>
+    </div>
+  </div>
+  <div class="w-96 p-1">
+    <div class="basis-96 shadow-xl bg-white font-medium rounded-md">
+      @for (notification of liveNotifications(); track $index;let idx = $index)
+      {
+      <div class="flex gap-x-1">
+        <div class="w-24 text-end">
+          <span class="text-xs text-gray-500 dark:text-neutral-400">{{
+            notification.currentTime
+          }}</span>
+        </div>
+        <div
+          class="relative last:after:hidden after:absolute after:top-7 after:bottom-0 after:start-3.5 after:w-px after:-translate-x-[0.5px] after:bg-gray-200 dark:after:bg-neutral-700"
+        >
+          <div class="relative z-10 size-7 flex justify-center items-center">
+            <div
+              class="size-2 rounded-full bg-gray-400 dark:bg-neutral-600"
+            ></div>
+          </div>
+        </div>
+        <div class="grow pt-0.5 pb-8">
+          <p class="mt-1 text-sm text-gray-600 dark:text-neutral-400">
+            Notification content here {{ idx + 1 }}
+          </p>
         </div>
       </div>
-      <!-- End Icon -->
-
-      <!-- Right Content -->
-      <div class="grow pt-0.5 pb-8">
-        <p class="mt-1 text-sm text-gray-600 dark:text-neutral-400">
-          Notification content here {{ idx }}
-        </p>
-      </div>
-      <!-- End Right Content -->
+      }
     </div>
-    }
   </div>
 </div>
