Add warning alert for server setup and improve connection status display

--- a/Angular/SSE/src/app/app.component.html
+++ b/Angular/SSE/src/app/app.component.html
@@ -1,13 +1,19 @@
 @let liveNotificationsCount = liveNotifications().length; @let
 sseConnectionState = eventSource ? eventSource.readyState : -1;
 
+<div
+  class="p-4 mb-4 text-sm text-center text-yellow-800 rounded-lg bg-yellow-50"
+  role="alert"
+>
+  <span class="font-medium">Warning alert!</span> Please Run
+  <code class="font-bold">node server.js</code>
+  before running the this app.
+</div>
 <div class="p-5 flex flex-row gap-4 bg-slate-100">
   <div class="w-1/2">
-    <div
-      class="flex flex-row justify-center items-center gap-4 text-center mt-1"
-    >
+    <div class="flex flex-col justify-center items-center gap-5">
       <select
-        class="basis-16 border-1 rounded-xl bg-gray-200"
+        class="w-56 border-1 rounded-lg p-1 bg-gray-200"
         [(ngModel)]="notificationCount"
       >
         <option value="0" disabled>Select notification count</option>
@@ -15,38 +21,42 @@ sseConnectionState = eventSource ? eventSource.readyState : -1;
         <option value="10">10 notification</option>
         <option value="15">15 notification</option>
       </select>
-      <div class="basis-16 rounded-xl">
-        <img
-          src="https://images.unsplash.com/photo-1633332755192-727a05c4013d?ixlib=rb-1.2.1&amp;ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&amp;auto=format&amp;fit=crop&amp;w=1480&amp;q=80"
-          alt="Profile avatar"
-          class="w-16 h-16 rounded-full object-cover"
-        />
-        @if(liveNotificationsCount > 0){
-        <div
-          class="absolute ml-8 -mt-5 flex items-center justify-center w-8 h-8 bg-red-500 rounded-full text-white font-medium"
-        >
-          {{ liveNotificationsCount }}
+      <div
+        class="flex flex-row justify-center items-center gap-4 text-center mt-1"
+      >
+        <div>
+          <img
+            src="https://images.unsplash.com/photo-1633332755192-727a05c4013d?ixlib=rb-1.2.1&amp;ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&amp;auto=format&amp;fit=crop&amp;w=1480&amp;q=80"
+            alt="Profile avatar"
+            class="w-16 h-16 rounded-full object-cover"
+          />
+          @if(liveNotificationsCount > 0){
+          <div
+            class="absolute ml-8 -mt-5 flex items-center justify-center w-8 h-8 bg-red-500 rounded-full text-white font-medium"
+          >
+            {{ liveNotificationsCount }}
+          </div>
+          }
         </div>
-        }
-      </div>
-      <div class="basis-64 border-1 rounded-xl bg-gray-200">
-        Connection status:
-        <span
-          [ngClass]="{
-            ' text-yellow-800': eventSource?.readyState === 0,
-            'text-green-800': eventSource?.readyState === 1,
-            'text-red-800': eventSource?.readyState === 2,
-            'text-gray-800': sseConnectionState === -1
-          }"
-          class="text-md font-medium rounded-full"
-        >
-          {{ connectionStatusText[sseConnectionState] || "Unknown" }}
-        </span>
+        <div class="p-1 border-1 rounded-lg bg-gray-200">
+          Connection status:
+          <span
+            [ngClass]="{
+              ' text-yellow-800': eventSource?.readyState === 0,
+              'text-green-800': eventSource?.readyState === 1,
+              'text-red-800': eventSource?.readyState === 2,
+              'text-gray-800': sseConnectionState === -1
+            }"
+            class="text-md font-medium rounded-full"
+          >
+            {{ connectionStatusText[sseConnectionState] || "Unknown" }}
+          </span>
+        </div>
       </div>
     </div>
   </div>
   <div class="w-96 p-1">
-    <div class="basis-96 shadow-xl bg-white font-medium rounded-md">
+    <div class="shadow-xl bg-white font-medium rounded-md">
       @for (notification of liveNotifications(); track $index;let idx = $index)
       {
       <div class="flex gap-x-1">
