--- a/Angular/signalForms/src/app/app.html
+++ b/Angular/signalForms/src/app/app.html
@@ -1,4 +1,4 @@
-<form class="form-group w-50 mx-auto m-5">
+<form class="form-group w-50 mx-auto m-5 bg-light p-5 rounded-3">
   <div class="accordion" id="accordionExample">
     <div class="accordion-item">
       <h2 class="accordion-header">
