--- a/Angular/ngIndiaSignalForms/src/app/app.html
+++ b/Angular/ngIndiaSignalForms/src/app/app.html
@@ -1,8 +1,9 @@
-<form>
+<form class="container">
   <div>
     <label for="firstName">First Name</label>
     <input type="text" id="firstName" name="firstName" [control]="userDetailForm.firstName" />
   </div>
+
   <div>
     <label for="lastName">Last Name</label>
     <input type="text" id="lastName" name="lastName" [control]="userDetailForm.lastName" />
