--- a/Angular/ProfileManager/src/styles.css
+++ b/Angular/ProfileManager/src/styles.css
@@ -1,5 +1,14 @@
 /* You can add global styles to this file, and also import other style files */
+
+/* Import Material prebuilt theme - required for Material components */
+@import '@angular/material/prebuilt-themes/indigo-pink.css';
+
+/* Import Tailwind */
 @import 'tailwindcss';
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+html,
+body {
+  height: 100%;
+  margin: 0;
+  font-family: Roboto, 'Helvetica Neue', sans-serif;
+}
