--- a/Angular/ProfileManager/src/styles.css
+++ b/Angular/ProfileManager/src/styles.css
@@ -12,3 +12,22 @@ body {
   margin: 0;
   font-family: Roboto, 'Helvetica Neue', sans-serif;
 }
+
+/* Snackbar custom styles */
+.success-snackbar {
+  background-color: #4caf50 !important;
+  color: white !important;
+}
+
+.error-snackbar {
+  background-color: #f44336 !important;
+  color: white !important;
+}
+
+.mat-mdc-snack-bar-container .mdc-snackbar__surface {
+  background-color: inherit !important;
+}
+
+.mat-mdc-snack-bar-container .mat-mdc-button {
+  color: white !important;
+}
